test/invalid/idl/tostring-escaped.webidl
interface mixin ToString {
  DOMString _toString();
};
